[gd_scene load_steps=2 format=3 uid="uid://cafvbq2q3v2yv"]

[ext_resource type="Script" uid="uid://c41fs624dt5wl" path="res://the_game_proper/pause_ui.gd" id="1_ng8s7"]

[node name="PauseUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ng8s7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02745098, 0.015686275, 0, 0.49411765)

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="Label" type="Label" parent="BoxContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="BoxContainer"]
layout_mode = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="BoxContainer/BoxContainer"]
layout_mode = 2
text = "Continue"

[node name="RestartButton" type="Button" parent="BoxContainer/BoxContainer"]
layout_mode = 2
text = "Restart"

[node name="ExitButton" type="Button" parent="BoxContainer/BoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="BoxContainer/BoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="BoxContainer/BoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="BoxContainer/BoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
